# Birfen_Yaz_Staji2024

FaceDetection_Recognition/: faces_embeddings_done_4classes.npz
FaceDetection_Recognition/scripts/: embedding.py  face_detection.py  faceloading.py  load.py  main.py
Yolo/: code.py
Yolo/cagla-10/: README.dataset.txt  README.roboflow.txt  data.yaml
Yolo/cagla-10/test/labels/: Ekran-goruntusu-2024-09-05-174038_png.rf.9734520d8347aa6dcd21af81412302d9.txt  Ekran-goruntusu-2024-09-05-174145_png.rf.b76bf84b1bb10c0a055de1dfb3741670.txt  Ekran-goruntusu-2024-09-05-174235_png.rf.d64824d438d42a2cea8b3754ff9bb949.txt  WIN_20240905_17_10_37_Pro_jpg.rf.04e1eb4edc08bb55dd3a17ea9c8a26d6.txt  WIN_20240905_17_10_47_Pro_jpg.rf.727531fca4cc948e804986293260b9a6.txt  (+3 more)
Yolo/cagla-10/train/: labels.cache
Yolo/cagla-10/valid/: labels.cache
actions_ws/src/turtlesim_interfaces/: CMakeLists.txt
bir_ws/bir_ws/log/: latest_build
den_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
den_ws/log/: latest_build
den_ws/src/talker_listener/: setup.py
fd_ws/fd_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
fd_ws/fd_ws/log/: latest_build  latest_list
ros2_ws/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/log/: latest_build
ros2_ws/src/my_robot_controller/: package.xml  setup.py
sercli_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
sercli_ws/log/: latest_build
sercli_ws/src/add_integers/: package.xml  setup.py
sercli_ws/src/custom_interfaces/: CMakeLists.txt  package.xml
(+182 files in other folders)
